--- a/springTeamProject/.settings/org.eclipse.wst.common.component
+++ b/springTeamProject/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                	
+                                    	
+    
     
     
     
@@ -8,7 +9,8 @@
     
     
     <wb-module deploy-name="spring-1.0.0-BUILD-SNAPSHOT">
-                                                                        
+                                                                                
+        
         
         
         
@@ -17,7 +19,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                		
+                                                                        		
+        
         
         
         
@@ -26,7 +29,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                		
+                                                                        		
+        
         
         
         
@@ -35,7 +39,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                		
+                                                                        		
+        
         
         
         
@@ -44,7 +49,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                		
+                                                                        		
+        
         
         
         
@@ -53,8 +59,9 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="/"/>
-                                                                	
+        <property name="context-root" value="spring"/>
+                                                                        	
+    
     
     
     
@@ -63,7 +70,8 @@
     
     
     </wb-module>
-                                
+                                    
+
 
 
 
