--- a/springTeamProject/src/main/webapp/resources/dashboard.css
+++ b/springTeamProject/src/main/webapp/resources/dashboard.css
@@ -90,3 +90,7 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+
+
+/** 커스튬 */
+a:hover {font-weight: bold; }
