--- a/springTeamProject/src/main/webapp/resources/css/style.css
+++ b/springTeamProject/src/main/webapp/resources/css/style.css
@@ -8203,3 +8203,27 @@ h1, h2, h3, h4, h5,
     padding: 20px 30px;
     border-bottom: 3px solid #f8f9fd;
     font-size: 14px; }
+    
+#modal_report{
+display:none; 
+position:fixed; 
+z-index:1; 
+padding-top:100px; 
+left:0; top:0; 
+width:100%; height:100%; 
+overflow:auto; 
+background-color:rgb(0,0,0); 
+background-color:rgba(0,0,0,0.4); 
+/* Black w/ opacity */}
+
+#modal_report_content{
+position:relative; 
+background-color:#fefefe; 
+margin:auto; padding:0; 
+border:1px solid #888; width:80%;
+border-radius:10px;
+box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19); 
+-webkit-animation-name:animatetop; 
+-webkit-animation-duration:0.4s; 
+animation-name:animatetop; 
+animation-duration:0.4s}
