--- a/springTeamProject/.settings/org.eclipse.wst.common.component
+++ b/springTeamProject/.settings/org.eclipse.wst.common.component
@@ -35,7 +35,7 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="/"/>
+        <property name="context-root" value="sample"/>
                                         	
     
     
