--- a/springTeamProject/src/main/webapp/resources/report.css
+++ b/springTeamProject/src/main/webapp/resources/report.css
@@ -23,3 +23,6 @@ box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 -webkit-animation-duration:0.4s; 
 animation-name:animatetop; 
 animation-duration:0.4s}
+
+#modal_trade{
+width:200px; height:200px; }
